--- a/404.html
+++ b/404.html
@@ -11,9 +11,12 @@
     <div class="hero">
           <img src="./logo.svg" alt="" class="hero__image">
     <div class="hero__text">
- <h1>Unisync CDN</h1>
+ <h1>404</h1>
+ <p>File not found</p>
+ <br>
 
-   <span>v 1.0.0</span>
+
+ <small>Unisync CDN <span>v 1.0.0</span></small>
     </div>
     </div>
    
