--- a/404.html
+++ b/404.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unisync CDN</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="shortcut icon" href="./logo.svg" type="image/x-icon">
+    <link rel="stylesheet" href="/style.css">
+    <link rel="shortcut icon" href="/logo.svg" type="image/x-icon">
 </head>
 <body>
     <div class="hero">
-          <img src="./logo.svg" alt="" class="hero__image">
+          <img src="/logo.svg" alt="" class="hero__image">
     <div class="hero__text">
  <h1>404</h1>
  <p>File not found</p>
@@ -17,6 +17,7 @@
 
 
  <small>Unisync CDN <span>v 1.0.0</span></small>
+
     </div>
     </div>
    
